# labomatics

./: .env.example  .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  index.html  infra.yaml  mkdocs.yml  pyproject.toml  readme.md  requirements.txt  sitemap.xml  students.csv
.github/workflows/: ci.yml  docs.yml  release.yml
admin/cli/: index.html
admin/overview/: index.html
admin/setup/: index.html
admin/template/: index.html
docs/: index.md
docs/admin/: cli.md  overview.md  setup.md  template.md
docs/openwrt/: base.md  dhcp.md  dns.md  firewall.md  nat.md  proxmox.md
esgilabs/: __init__.py  __main__.py  config.py  credentials.py  deploy.py  diff.py  students.py
esgilabs/commands/: __init__.py  _helpers.py  apply.py  creds.py  find.py  inspect.py
esgilabs/proxmox/: __init__.py  acl.py  client.py  pools.py  sdn.py  tasks.py  vms.py
labomatics/: __init__.py  __main__.py  config.py  credentials.py  deploy.py  diff.py  ip_pool.py  students.py
labomatics/commands/: __init__.py  _helpers.py  apply.py  build_openwrt.py  build_template.py  creds.py  destroy_all.py  find.py  init.py  inspect.py  ips.py  recreate.py  status.py
labomatics/daemon/: __init__.py  quotad.py
labomatics/packer/alpine/: alpine.pkr.hcl
labomatics/packer/alpine/http/alpine/: answers
labomatics/packer/fedora/: fedora.pkr.hcl  variables.pkr.hcl  versions.pkr.hcl
labomatics/packer/ubuntu/: ubuntu.pkr.hcl
labomatics/proxmox/: __init__.py  acl.py  client.py  pools.py  sdn.py  tasks.py  vms.py
labomatics/templates/: .env.example  OPENWRT_INIT  infra.yaml.example  students.csv.example
openwrt/base/: index.html
openwrt/dhcp/: index.html
openwrt/dns/: index.html
openwrt/firewall/: index.html
openwrt/nat/: index.html
openwrt/proxmox/: index.html
scripts/: build-openwrt-vm-template.sh
search/: search_index.json
systemd/: labomatics-quotad.service
tests/: test_config.py  test_ip_pool.py  test_students.py
